<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">So-So</string>
    <string name="username">Enter Username/Email Address</string>
    <string name="password">Enter Password</string>
    <string name="create_account">Create an Account</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_welcome_page">Welcome Page</string>
    <string name="welcome_message">To get started, lets setup your Default Settings! </string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="hello_world">Hello world!</string>

</resources>
