<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hello.jcw27.washington.edu.so_so.CreateNewAccount">

    <ImageView
        android:id="@+id/image_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/picholdericon"
        android:contentDescription="Image Placeholder Icon" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/image_icon"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_alignBottom="@+id/image_icon"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/image_icon" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_below="@+id/image_icon"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/last_name"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/first_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/last_name"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/official_create_account"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/phone_number"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
